# handlers/addresses.go
@@ -55,6 +55,14 @@ func NewCreateErrorResponse(model *models.ErrorModel) middleware.Responder {
 	return addresses.NewCreateAddressDefault(int(*model.Status)).WithPayload(NewErrorResponse(model))
 }
 
+func NewPutErrorResponse(model *models.ErrorModel) middleware.Responder {
+	return addresses.NewPutAddressesDefault(int(*model.Status)).WithPayload(NewErrorResponse(model))
+}
+
+func NewDeleteErrorResponse(model *models.ErrorModel) middleware.Responder {
+	return addresses.NewDeleteAddressesDefault(int(*model.Status)).WithPayload(NewErrorResponse(model))
+}
+
 func GetConfigMaps() (v1core.ConfigMapInterface, *models.ErrorModel) {
 	client, err := GetClient()
 	if err != nil {
@@ -65,6 +73,46 @@ func GetConfigMaps() (v1core.ConfigMapInterface, *models.ErrorModel) {
 		return nil, NewErrorModel(500, "Unable to find namespace", err.Error())
 	}
 	return client.Core().ConfigMaps(namespace), nil
+}
+
+func PutAddressesHandler(params addresses.PutAddressesParams) middleware.Responder {
+	configMaps, errorModel := GetConfigMaps()
+	if errorModel != nil {
+		return NewPutErrorResponse(errorModel)
+	}
+
+	configMap, _ := configMaps.Get("addressdb")
+
+    result, errModel := SetAddresses(params.AddressConfigMap, configMaps, configMap)
+    if errModel != nil {
+        return NewPutErrorResponse(errModel)
+    }
+    return addresses.NewPutAddressesCreated().WithPayload(result)
+}
+
+func DeleteAddressesHandler(params addresses.DeleteAddressesParams) middleware.Responder {
+	configMaps, errorModel := GetConfigMaps()
+	if errorModel != nil {
+		return NewDeleteErrorResponse(errorModel)
+	}
+	var config models.AddressConfigMap
+	configMap, err := configMaps.Get("addressdb")
+	if err == nil {
+		jstr := configMap.Data["json"]
+		if err := json.Unmarshal([]byte(jstr), &config); err != nil {
+			return NewDeleteErrorResponse(NewErrorModel(500, "Error reading config", err.Error()))
+		}
+	}
+
+    for _, address := range params.AddressList {
+        delete(config, address)
+    }
+
+    result, errModel := SetAddresses(config, configMaps, configMap)
+    if errModel != nil {
+        return NewDeleteErrorResponse(errModel)
+    }
+    return addresses.NewDeleteAddressesOK().WithPayload(result)
 }
 
 func ListAddressesHandler(params addresses.ListAddressesParams) middleware.Responder {
@@ -113,7 +161,6 @@ func CreateAddressHandler(params addresses.CreateAddressParams) middleware.Respo
 
     currentConfig := make(models.AddressConfigMap)
 	configMap, err := configMaps.Get("addressdb")
-    newConfig := err != nil
     if err == nil {
         if data, ok := configMap.Data["json"]; ok {
             fmt.Printf("Data was set, decoding\n")
@@ -129,9 +176,18 @@ func CreateAddressHandler(params addresses.CreateAddressParams) middleware.Respo
         currentConfig[k] = v
     }
 
-	jbytes , err := json.Marshal(currentConfig)
+    result, errModel := SetAddresses(currentConfig, configMaps, configMap)
+    if errModel != nil {
+        return NewCreateErrorResponse(errModel)
+    }
+    return addresses.NewCreateAddressCreated().WithPayload(result)
+}
+
+func SetAddresses(config models.AddressConfigMap, configMaps v1core.ConfigMapInterface, configMap * v1.ConfigMap) (models.AddressConfigMap, * models.ErrorModel) {
+
+	jbytes , err := json.Marshal(config)
 	if err != nil {
-		return NewCreateErrorResponse(NewErrorModel(500, "Error serializing address config", err.Error()))
+		return nil, NewErrorModel(500, "Error serializing address config", err.Error())
 	}
 
     jstr := string(jbytes)
@@ -139,10 +195,10 @@ func CreateAddressHandler(params addresses.CreateAddressParams) middleware.Respo
     fmt.Printf("Deploying new address config: %s\n", jstr)
     err = DeployConfig(jstr)
     if err != nil {
-		return NewCreateErrorResponse(NewErrorModel(500, "Error deploying address config", err.Error()))
+		return nil, NewErrorModel(500, "Error deploying address config", err.Error())
     }
 
-    if newConfig {
+    if configMap == nil {
         configMap = new(v1.ConfigMap)
         configMap.Name = "addressdb"
         configMap.Namespace, _ = GetNamespace()
@@ -150,15 +206,15 @@ func CreateAddressHandler(params addresses.CreateAddressParams) middleware.Respo
         configMap.Data["json"] = jstr
         _, err = configMaps.Create(configMap)
 		if err != nil {
-			return NewCreateErrorResponse(NewErrorModel(500, "Unable to create configmap", err.Error()))
+			return nil, NewErrorModel(500, "Unable to create configmap", err.Error())
 		}
     } else {
         configMap.Data = make(map[string]string)
         configMap.Data["json"] = jstr
         _, err = configMaps.Update(configMap)
         if err != nil {
-            return NewCreateErrorResponse(NewErrorModel(500, "Unable to update configmap", err.Error()))
+            return nil, NewErrorModel(500, "Unable to update configmap", err.Error())
         }
     }
-	return addresses.NewCreateAddressCreated().WithPayload(currentConfig)
+	return config, nil
 }
