# restapi/operations/addresses/delete_addresses_responses.go
@@ -1,0 +1,103 @@
+package addresses
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/EnMasseProject/enmasse-rest/models"
+)
+
+/*DeleteAddressesOK Address config response
+
+swagger:response deleteAddressesOK
+*/
+type DeleteAddressesOK struct {
+
+	// In: body
+	Payload models.AddressConfigMap `json:"body,omitempty"`
+}
+
+// NewDeleteAddressesOK creates DeleteAddressesOK with default headers values
+func NewDeleteAddressesOK() *DeleteAddressesOK {
+	return &DeleteAddressesOK{}
+}
+
+// WithPayload adds the payload to the delete addresses o k response
+func (o *DeleteAddressesOK) WithPayload(payload models.AddressConfigMap) *DeleteAddressesOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete addresses o k response
+func (o *DeleteAddressesOK) SetPayload(payload models.AddressConfigMap) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteAddressesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if err := producer.Produce(rw, o.Payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+/*DeleteAddressesDefault Unexpected error
+
+swagger:response deleteAddressesDefault
+*/
+type DeleteAddressesDefault struct {
+	_statusCode int
+
+	// In: body
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewDeleteAddressesDefault creates DeleteAddressesDefault with default headers values
+func NewDeleteAddressesDefault(code int) *DeleteAddressesDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &DeleteAddressesDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the delete addresses default response
+func (o *DeleteAddressesDefault) WithStatusCode(code int) *DeleteAddressesDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the delete addresses default response
+func (o *DeleteAddressesDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the delete addresses default response
+func (o *DeleteAddressesDefault) WithPayload(payload *models.ErrorResponse) *DeleteAddressesDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the delete addresses default response
+func (o *DeleteAddressesDefault) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *DeleteAddressesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		if err := producer.Produce(rw, o.Payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
