# restapi/operations/addresses/put_addresses_responses.go
@@ -1,0 +1,125 @@
+package addresses
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/EnMasseProject/enmasse-rest/models"
+)
+
+/*PutAddressesCreated Address config response
+
+swagger:response putAddressesCreated
+*/
+type PutAddressesCreated struct {
+	/*The address config that was deployed
+	  Required: true
+	*/
+	Location string `json:"Location"`
+
+	// In: body
+	Payload models.AddressConfigMap `json:"body,omitempty"`
+}
+
+// NewPutAddressesCreated creates PutAddressesCreated with default headers values
+func NewPutAddressesCreated() *PutAddressesCreated {
+	return &PutAddressesCreated{}
+}
+
+// WithLocation adds the location to the put addresses created response
+func (o *PutAddressesCreated) WithLocation(location string) *PutAddressesCreated {
+	o.Location = location
+	return o
+}
+
+// SetLocation sets the location to the put addresses created response
+func (o *PutAddressesCreated) SetLocation(location string) {
+	o.Location = location
+}
+
+// WithPayload adds the payload to the put addresses created response
+func (o *PutAddressesCreated) WithPayload(payload models.AddressConfigMap) *PutAddressesCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the put addresses created response
+func (o *PutAddressesCreated) SetPayload(payload models.AddressConfigMap) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PutAddressesCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header Location
+
+	location := o.Location
+	if location != "" {
+		rw.Header().Set("Location", location)
+	}
+
+	rw.WriteHeader(201)
+	if err := producer.Produce(rw, o.Payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+/*PutAddressesDefault Unexpected error
+
+swagger:response putAddressesDefault
+*/
+type PutAddressesDefault struct {
+	_statusCode int
+
+	// In: body
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewPutAddressesDefault creates PutAddressesDefault with default headers values
+func NewPutAddressesDefault(code int) *PutAddressesDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PutAddressesDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the put addresses default response
+func (o *PutAddressesDefault) WithStatusCode(code int) *PutAddressesDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the put addresses default response
+func (o *PutAddressesDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the put addresses default response
+func (o *PutAddressesDefault) WithPayload(payload *models.ErrorResponse) *PutAddressesDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the put addresses default response
+func (o *PutAddressesDefault) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PutAddressesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		if err := producer.Produce(rw, o.Payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
